--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,17 @@ services:
       - ./kibana/config/:/opt/kibana/config/
     depends_on:
       - elasticsearch
+  fluentd:
+    build: ./fluentd
+    volumes:
+      - ./fluentd/log:/fluentd/log
+      - ./fluentd/conf:/fluentd/etc
+    ports:
+      - "24224:24224"
+    networks:
+      - monitoring_net
+    depends_on:
+      - elasticsearch
 networks:
   monitoring_net:
     driver: bridge
